<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_darker_yellow">

        <EditText
            android:id="@+id/et_pet_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:fontFamily="@font/nexalight"
            android:gravity="center"
            android:hint="@string/pet_name_hint"
            android:inputType="textVisiblePassword"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/app_red"
            android:textSize="16sp"
            app:backgroundTint="@color/app_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_pet_species"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:fontFamily="@font/nexalight"
            android:gravity="center"
            android:hint="@string/pet_species_hint"
            android:inputType="textVisiblePassword"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/app_red"
            android:textSize="16sp"
            app:backgroundTint="@color/app_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pet_name" />

        <EditText
            android:id="@+id/et_pet_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:fontFamily="@font/nexalight"
            android:gravity="center"
            android:hint="@string/pet_date_of_birth_hint"
            android:inputType="date"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/app_red"
            android:textSize="16sp"
            app:backgroundTint="@color/app_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pet_species" />

        <RelativeLayout
            android:id="@+id/image_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pet_dob">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_launch_camera"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/launch_cam_icon" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_open_gallery"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/btn_launch_camera"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/launch_gallery_icon" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_buttons_layout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/save_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/btn_save"
                android:text="@string/btn_cancel" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>