<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_gray"
        tools:context=".ui.fragments.notifications.MealNotificationFragment">

        <LinearLayout
            android:id="@+id/textfields_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                app:boxStrokeColor="@color/app_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pet_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexalight"
                    android:hint="@string/pet_name_hint" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_notification_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nexalight"
                        android:hint="@string/notification_title_hint" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/date_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/textfields_layout"
            app:layout_constraintStart_toStartOf="@+id/textfields_layout"
            app:layout_constraintTop_toBottomOf="@id/textfields_layout">

            <TextView
                android:id="@+id/tv_header_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/nexalight"
                android:text="@string/choose_notification_date"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/btn_datepicker"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tv_header_date"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/calendar_icon" />
        </RelativeLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnScheduleNotification"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/app_dark_green"
            android:fontFamily="@font/nexalight"
            android:text="Schedule notification"
            android:textColor="@color/app_yellow"
            app:layout_constraintEnd_toEndOf="@+id/date_buttons_layout"
            app:layout_constraintStart_toStartOf="@+id/date_buttons_layout"
            app:layout_constraintTop_toBottomOf="@+id/date_buttons_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>